[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/world/CommonStuff.gd" type="Script" id=1]
[ext_resource path="res://src/character/LabelLayout.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="CommonStuff" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )
stuff_type_name = "æžª"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 10, -10, -10, -10, -10, 10, 10, 10, 10, -10 )
width = 1.0

[node name="LabelLayout" parent="." instance=ExtResource( 2 )]

[node name="PlayerName" parent="LabelLayout" index="0"]
margin_left = -41.2803
margin_top = -51.001
margin_right = 35.7197
margin_bottom = -0.000991821

[editable path="LabelLayout"]
